--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Houmam Limoury",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
