--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
- 
+  "engines": {
+    "node": "16.x"
+  },
   "author": "Houmam Limoury",
   "license": "ISC",
   "dependencies": {
