--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Houmam Limoury",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "b2-sdk": "^1.3.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
